<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/into_background">

    <com.blueappsdev.unimedpesquisa.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dinFamily="regular"
        android:textColor="@android:color/white"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_marginTop="270dp"
        android:textSize="30sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CustomEditText"
        android:hint="@string/name"
        android:layout_marginRight="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="30dp"
        app:hintTextAppearance="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="25sp"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CustomEditText"
        android:hint="@string/email"
        android:layout_marginRight="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <com.blueappsdev.unimedpesquisa.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bairro:"
        android:layout_marginRight="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <com.blueappsdev.unimedpesquisa.utils.CustomTextView
        android:id="@+id/neighborhoodSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione seu bairro"
        android:layout_marginRight="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textSize="25sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <com.blueappsdev.unimedpesquisa.utils.CustomButton
        android:id="@+id/continueButton"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/continue_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:textSize="17sp"/>

</LinearLayout>